see #19888 - make sure `java.locale.providers` is set early to `SPI,JRE,CLDR` for unit tests with Java >= 9 (before JUnit itself initializes Java locales)
git-svn-id: https://josm.openstreetmap.de/svn/trunk@17967 0c6e7542-c601-0410-84e7-c038aed88b3b