@@ -401,6 +401,7 @@ Build-Date: ${build.tstamp}
 	                <fork>
 	                    <jvmarg value="${jacocoagent@{testfamily}@{testITsuffix}}" if:set="jacocoagent@{testfamily}@{testITsuffix}" />
 	                    <jvmarg value="-Dfile.encoding=UTF-8"/>
+	                    <jvmarg value="-Djava.locale.providers=SPI,JRE,CLDR" if:set="isJava9" />
 	                    <jvmarg value="-javaagent:${test.dir}/lib/jmockit.jar"/>
 	                    <jvmarg value="-Djunit.jupiter.extensions.autodetection.enabled=true"/>
 	                    <jvmarg value="-Djunit.jupiter.execution.parallel.enabled=true"/>
